style: 공통스타일 속성 적용
- 기본 스타일 구성
- 공통 색상 및 width 설정
- font style 및 size 구성
- CSS in JS 방식으로 reset CSS 구성

--- a/final-cra/public/index.html
+++ b/final-cra/public/index.html
@@ -8,7 +8,11 @@
       name="description"
       content="Dobby Islands Free is fantastic reservation contents site"
     />
-    <title>React App</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="./styles/main.css" />
+    <title>DIF</title>
   </head>
   <body>
     <div id="root"></div>
