--- a/final-cra/public/index.html
+++ b/final-cra/public/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="./styles/main.css" />
+    <link rel="stylesheet" href="./style/global.css" />
     <title>DIF</title>
   </head>
   <body>
